Added additional output messages. Resolved problem with encodings. Dataaccess layer update is coming.

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -2,3 +2,6 @@ serialStart=Serial receiver trying to connect %s...
 serialStartError=Failed to start serial receiver. Press enter to retry.
 serialStartSuccess=Success. Waiting for input data.\n
 observerProtocolNewData=New data was extracted -> %s
+printPackageInfo=Database was refreshed with message from stand \u2116%s.\n\
+Module: %s\n\
+Event: %s\n
