Entities layer updated (Module class changed). Dependent classes changed relatively.

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -4,4 +4,5 @@ serialStartSuccess=Success. Waiting for input data.\n
 observerProtocolNewData=New data was extracted -> %s
 printPackageInfo=Database was refreshed with message from stand \u2116%s.\n\
 Module: %s\n\
-Event: %s\n
+Event: %s\n\
+New value: %s\n
